[tool.poetry]
name = "cartoonize_image"
version = "0.1.0"
description = "to cartoonize image"
authors = ["kavan <kavandevelopment@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = {version= "^1.21.5", python= ">=3.9,<3.11"}
opencv-python = "^4.5.5"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
